# rust-crossplat-audio-capture

./: .coderabbit.yaml  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CI_CD_IMPROVEMENTS_SUMMARY.md  CLAUDE.md  CROSS_COMPILATION_STATUS.md  CROSS_COMPILATION_TOOLS_SUMMARY.md  Cargo.toml  DOCKER_CROSS_COMPILATION_OPTIONS.md  LICENSE-APACHE  LICENSE-MIT  MANUAL_WORKFLOW_SETUP.md  Makefile  PRODUCT_REQUIREMENTS.md  PROJECT_ANALYSIS.md  README.md  VISION.md  build.rs  deny.toml  docker-compose.native-testing.yml  docker-compose.testing-no-kvm.yml  docker-compose.testing.yml  docker-compose.unified.yml  docker-compose.yml  lefthook.yml  mise.toml  rust-toolchain.toml  test-docker-setup.sh  test-exit.sh  test-vlc-fixes.sh  verify-platform-testing.sh
.cargo/: config.toml
.devcontainer/: devcontainer.json
.docker/: linux.Dockerfile  macos.Dockerfile  setup-audio-mac.sh  setup-audio-win.ps1  setup-audio.sh  windows.Dockerfile
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml
.mulch/: mulch.config.yaml
.seeds/: ci-e2e-audio-2026-07-02.md  config.yaml  delegation-backlog-2026-07-02.md  issues.jsonl  project-improvement-audit-2026-07-02.md
apps/audio-graph/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/audio-graph/src-tauri/capabilities/: default.json
apps/audio-graph/src-tauri/config/: default.toml
apps/audio-graph/src-tauri/src/: commands.rs  events.rs  lib.rs  main.rs  state.rs
apps/audio-graph/src-tauri/src/asr/: mod.rs
apps/audio-graph/src-tauri/src/audio/: capture.rs  mod.rs  pipeline.rs  vad.rs
apps/audio-graph/src-tauri/src/diarization/: mod.rs
apps/audio-graph/src-tauri/src/graph/: entities.rs  extraction.rs  mod.rs  temporal.rs
apps/audio-graph/src-tauri/src/llm/: api_client.rs  engine.rs  mod.rs
apps/audio-graph/src-tauri/src/models/: mod.rs
apps/audio-graph/src-tauri/src/settings/: mod.rs
apps/audio-graph/src-tauri/src/sidecar/: mod.rs
apps/audio-graph/src-tauri/src/speech/: mod.rs
benches/: bridge.rs  observability.rs
bindings/rsac-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
bindings/rsac-ffi/include/: rsac.h  rsac_generated.h
bindings/rsac-ffi/src/: compose.rs  lib.rs
bindings/rsac-napi/: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package.json
bindings/rsac-napi/src/: lib.rs
bindings/rsac-napi/tests/: capture_smoke.mjs  smoke.test.mjs
bindings/rsac-python/: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml
bindings/rsac-python/.cargo/: config.toml
bindings/rsac-python/rsac/: __init__.py  __init__.pyi
bindings/rsac-python/src/: lib.rs
bindings/rsac-python/tests/: capture_smoke.py  smoke.py
debian/: control
docker/: README.md
docs/: API.md  ARCHITECTURE.md  CI_AUDIO_TESTING.md  CI_CD_IMPROVEMENTS_COMPLETED.md  CI_CD_SETUP.md  CONSUMING_RSAC.md  CONTRIBUTING.md  CROSS_LANGUAGE_BINDINGS.md  DOCKER_TESTING.md  FRAMEWORK_COMPATIBILITY.md  INTEROP.md  LOCAL_TESTING_GUIDE.md  MACOS26_PROCESS_TAP_FIX.md  MACOS_VERSION_COMPATIBILITY.md  MOBILE_BACKEND_DESIGN.md  OBJC2_MIGRATION_PLAN.md  PERFORMANCE.md  PLATFORM_TESTING.md  README.md  RELEASE_PROCESS.md  SELF_HOSTED_TCC_RUNNER.md  STACKED_PRS.md  TESTING.md  TESTING_REFACTORING.md  TESTING_STRATEGY.md  TROUBLESHOOTING.md  WINDOWS_AUDIO_DEBUG.md  WORKFLOW_CHANGES_PENDING.md  app_capture_implementation_plan.md  app_specific_capture_research.md  features.md  implementation_summary.md  macos_application_capture.md  system_requirements.md  troubleshooting.md
examples/: application_capture_demo.rs  async_capture.rs  audio_player.rs  audio_recorder_example.rs  basic_capture.rs  composed_capture.rs  demo_library.rs  flexible_pipewire_example.rs  list_devices.rs  macos_application_capture.rs  record_to_file.rs  rt_basic_processor.rs  rt_callback_simple.rs  test_capture.rs  test_capture_robust.rs  test_coreaudio.rs  test_coreaudio_app.rs  test_pipewire.rs  test_pulseaudio.rs  test_tone.rs  test_tone_robust.rs  test_transcription.rs  test_whisper.rs  test_whisper_minimal.rs  test_windows.rs  verify_audio.rs  wav_demo.rs  windows_apis.rs  windows_application_capture.rs  windows_device_test.rs
integrations/tauri-plugin-rsac/: .gitignore  Cargo.toml  README.md  build.rs
integrations/tauri-plugin-rsac/android/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro  settings.gradle.kts
integrations/tauri-plugin-rsac/android/src/main/: AndroidManifest.xml
integrations/tauri-plugin-rsac/android/src/main/kotlin/ai/codeseys/rsac/tauri/: RsacTauriPlugin.kt
integrations/tauri-plugin-rsac/guest-js/: index.ts  package.json
integrations/tauri-plugin-rsac/ios/: Package.swift
integrations/tauri-plugin-rsac/ios/Sources/: RsacTauriPlugin.swift
integrations/tauri-plugin-rsac/permissions/: default.toml
integrations/tauri-plugin-rsac/permissions/autogenerated/: reference.md
integrations/tauri-plugin-rsac/permissions/autogenerated/commands/: list_targets.toml  subscribe_meta.toml  subscribe_raw.toml
integrations/tauri-plugin-rsac/permissions/schemas/: schema.json
integrations/tauri-plugin-rsac/src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs  session.rs
mobile/android-native/: Cargo.toml
mobile/android-native/src/: lib.rs
mobile/androidtest-native/: Cargo.toml
mobile/androidtest-native/src/: lib.rs
reference/: README.md  REFERENCE_ANALYSIS.md
scripts/: README.md  aggregate-test-results.sh  bump-version.sh  check-module-dag.sh  check-version-lockstep.sh  check_deps.sh  ci-android-emu-payload.sh  ci-linux-audio-route.sh  ci-linux-tone-loop.sh  ci-windows-audio-default.ps1  cross-compile-check.sh  debug-audio-system.sh  docker-test-all.sh  download_test_audio.sh  download_test_files.rs  gate-bindings.sh  gate-linux.sh  gate.ps1  gate.sh  install-pipewire-deps.sh  record-build-info.sh  run-bash.ps1  run_audio_tests.sh  run_linux_matrix_tests.sh  setup-tcc-runner.sh  setup_env.sh  start-tcc-runner.sh  task-complexity-report.json  (+14 more)
virtual-audio-device/: Cargo.toml  README.md
virtual-audio-device/src/: main.rs
virtual-audio-device/src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
(+339 files in other folders)
