[package]
name = "rsac"
version = "0.1.0"
edition = "2021"
build = "build.rs"
autobins = false

[features]
# Platform-specific features
# These features enable the compilation of platform-specific audio backend code.
# By default, all platforms are enabled to provide broad compatibility.
# Users can choose to compile only for specific platforms by disabling default features
# and enabling only the desired platform features.
# Example: `cargo build --no-default-features --features feat_windows`
feat_windows = []
feat_linux = ["pipewire", "libspa"]
feat_macos = []

# Default features - enables all platform backends
default = ["feat_windows", "feat_linux", "feat_macos"]

test-utils = [] # Feature to enable test utilities

# Streaming/data-plane features
async-stream = ["dep:atomic-waker"]  # Async Stream support (adds atomic-waker for async notification)
sink-wav = []                        # WavFileSink sink adapter (hound is always available)

[dependencies]
# Core dependencies
futures-core = "0.3.32"
rtrb = "0.3.3"                                               # Lock-free SPSC ring buffer for audio data bridge
atomic-waker = { version = "1.1.2", optional = true }           # Async waker for ring buffer notification (behind async-stream feature)
futures-util = "0.3.32"                                    # For stream utilities
futures-channel = "0.3.32"                                 # For MPSC channel for async stream
thiserror = "2.0.18"                                       # For error handling
log = "0.4.29"                                                 # For logging

# Linux PipeWire dependencies (conditional)
pipewire = { version = "0.9.2", features = ["v0_3_44"], optional = true }
libspa = { version = "0.9.2", optional = true }
hound = "3.5.1"
sysinfo = "0.38.4"
clap = { version = "4.5.60", features = ["derive"] }
inquire = "0.9.4"
indicatif = "0.18.4"
color-eyre = "0.6.5"
ctrlc = "3.5.2"
rodio = "0.22.2"
reqwest = { version = "0.13.2", features = ["blocking"] }
libc = "0.2.183"
atty = "0.2.14"

# TUI dependencies
crossterm = "0.29.0"
ratatui = "0.30.0"
tokio = { version = "1.50.0", features = ["full"] }
env_logger = "0.11.9"

# For testing
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rand = "0.10.0"
rand_pcg = "0.10.1"

# Platform-specific audio capture
[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.22.0"  # WASAPI bindings for Process Loopback
windows = { version = "0.62.2", features = [
    "Foundation",                 # For basic Windows types like HRESULT, BOOL, HANDLE
    "Win32_Foundation",           # For basic Windows types like HRESULT, BOOL, HANDLE
    "Win32_System_Com",           # For COM initialization (CoInitializeEx, CoUninitialize) and operations (CoCreateInstance, CLSCTX_ALL)
    "Win32_Media_Audio",          # For WASAPI interfaces (IMMDeviceEnumerator, MMDeviceEnumerator, IMMDevice, IAudioClient, IAudioCaptureClient, WAVEFORMATEX, IAudioSessionManager2, IAudioSessionEnumerator, IAudioSessionControl, IAudioSessionControl2)
    # and constants (eRender, eConsole, AUDCLNT_SHAREMODE_SHARED, AUDCLNT_STREAMFLAGS_LOOPBACK)
    # Process Loopback specific: AUDIOCLIENT_ACTIVATION_PARAMS, AUDIOCLIENT_PROCESS_LOOPBACK_PARAMS, VIRTUAL_AUDIO_DEVICE_PROCESS_LOOPBACK
    "Win32_Devices_FunctionDiscovery",  # For device enumeration
    "Win32_Devices_Properties",         # For device properties
    "Win32_UI_Shell_PropertiesSystem",  # For property system
    "Win32_System_Com_StructuredStorage", # For structured storage
    "Win32_Media_KernelStreaming",      # For kernel streaming
    "Win32_Media_Multimedia",           # For multimedia APIs
    "Win32_System_Threading",           # For OpenProcess, GetCurrentProcessId, QueryFullProcessImageNameW
    "Win32_System_ProcessStatus",       # For K32GetModuleFileNameExW
    "Win32_System_Variant",             # For PROPVARIANT used in Process Loopback activation
    "Win32_Security",                   # For security APIs
] }
windows-core = "0.62.2"  # Core Windows types
widestring = "1.2.1"   # For wide string conversion
sysinfo = "0.38.4"     # For process discovery by name

[target.'cfg(target_os = "linux")'.dependencies]
# PipeWire dependencies for application-specific capture
# System requirements: libpipewire-0.3-dev, pkg-config, build-essential, clang, libclang-dev, and llvm-dev
pipewire = { version = "0.9.2", features = ["v0_3_44"] }  # PipeWire bindings with v0.3.44+ features for monitor streams
libspa = "0.9.2"      # SPA (Simple Plugin API) for format negotiation and parameter handling
libspa-sys = "0.9.2"  # Low-level SPA bindings for direct parameter access

[target.'cfg(target_os = "macos")'.dependencies]
# CoreAudio dependencies for Process Tap (macOS 14.4+)
coreaudio-rs = { version = "0.14.0", features = ["core_audio"] }  # High-level CoreAudio bindings
coreaudio-sys = "0.2.17"  # Low-level CoreAudio FFI bindings
objc2-core-audio = { version = "0.3.2", features = [
    "std",
    "AudioHardware",              # For AudioHardwareCreateProcessTap, AudioHardwareCreateAggregateDevice
    "AudioHardwareDeprecated",    # For additional hardware APIs
] }
objc2-core-audio-types = { version = "0.3.2", features = [
    "std",
    "bitflags",
    "CoreAudioBaseTypes",         # For AudioStreamBasicDescription, AudioObjectID
] }
objc2-core-foundation = { version = "0.3.2", features = [
    "std",
    "CFString",                   # For CFString handling in device UIDs
] }
core-foundation = "0.10.1"          # For CFDictionary creation (aggregate device description)
core-foundation-sys = "0.8.7"       # Low-level Core Foundation FFI bindings
cocoa = "0.26.1"                    # Cocoa bindings for NSRunningApplication enumeration
objc = "0.2.7"                      # Objective-C runtime bindings
# Note: Process Tap APIs (AudioHardwareCreateProcessTap, CATapDescription) may require
# custom FFI bindings as they are very new (macOS 14.4+) and may not be in objc2 yet

# Error handling
thiserror = "2.0.18"

[build-dependencies]
pkg-config = "0.3.32"

[dev-dependencies]
criterion = "0.8.2" # Benchmarking
tempfile = "3.27.0" # Temporary files for tests
serde = { version = "1.0.228", features = [
    "derive",
] } # For serialization in test reports
serde_json = "1.0.149" # For test report serialization
ctrlc = "3.5.2"  # For graceful shutdown in examples
rand = "0.10.0" # For generating test data
rand_pcg = "0.10.1" # For deterministic random numbers in tests

[[bin]]
name = "rsac"
path = "src/main.rs"

[[bin]]
name = "standardized_test"
path = "src/bin/standardized_test.rs"

[[example]]
name = "audio_player"
path = "examples/audio_player.rs"
required-features = ["test-utils"]

[[example]]
name = "test_tone"
path = "examples/test_tone.rs"
required-features = ["test-utils"]

[[example]]
name = "verify_audio"
path = "examples/verify_audio.rs"

[[example]]
name = "basic_capture"
path = "examples/basic_capture.rs"

[[example]]
name = "record_to_file"
path = "examples/record_to_file.rs"

[[example]]
name = "list_devices"
path = "examples/list_devices.rs"

[[bin]]
name = "app_capture_test"
path = "src/bin/app_capture_test.rs"

[[bin]]
name = "pipewire_test"
path = "src/bin/pipewire_test.rs"

[[bin]]
name = "run_tests"
path = "src/bin/run_tests.rs"

[[bin]]
name = "test_report_generator"
path = "src/bin/test_report_generator.rs"

# DEPRECATED: Uses old rsac API (shell-based PipeWire discovery, simulated capture).
# Needs rewrite to AudioCaptureBuilder → AudioCapture → CapturingStream pipeline.
# [[bin]]
# name = "firefox_capture_test"
# path = "src/bin/firefox_capture_test.rs"

# DEPRECATED: Uses old rsac API (PipeWireApplicationCapture, ApplicationSelector).
# Needs rewrite to AudioCaptureBuilder → AudioCapture → CapturingStream pipeline.
# [[bin]]
# name = "real_pipewire_test"
# path = "src/bin/real_pipewire_test.rs"

# DEPRECATED: Uses old rsac API (PipeWireApplicationCapture, ApplicationCaptureFactory,
# AudioSourceDiscovery). Needs rewrite to new pipeline.
# [[bin]]
# name = "dynamic_vlc_capture"
# path = "src/bin/dynamic_vlc_capture.rs"

# DEPRECATED: Uses old rsac API (PipeWireApplicationCapture, AudioSourceDiscovery).
# Needs rewrite to AudioCaptureBuilder → AudioCapture → CapturingStream pipeline.
# [[bin]]
# name = "audio_recorder_tui"
# path = "src/bin/audio_recorder_tui.rs"
# required-features = ["feat_linux"]

[[bin]]
name = "pipewire_diagnostics"
path = "src/bin/pipewire_diagnostics.rs"
required-features = ["feat_linux"]

[workspace]
members = []
