[package]
name = "rsac"
version = "0.2.0"
edition = "2021"
build = "build.rs"
autobins = false

[features]
# Platform-specific features
# These features enable the compilation of platform-specific audio backend code.
# By default, all platforms are enabled to provide broad compatibility.
# Users can choose to compile only for specific platforms by disabling default features
# and enabling only the desired platform features.
# Example: `cargo build --no-default-features --features feat_windows`
feat_windows = []
feat_linux = []
feat_macos = []

# Default features - enables all platform backends
default = ["feat_windows", "feat_linux", "feat_macos"]

test-utils = [] # Feature to enable test utilities

# Streaming/data-plane features
async-stream = ["dep:atomic-waker"]  # Async Stream support (adds atomic-waker for async notification)
sink-wav = []                        # WavFileSink sink adapter (hound is always available)

[dependencies]
# Core dependencies
futures-core = "0.3.32"
rtrb = "0.3.3"                                               # Lock-free SPSC ring buffer for audio data bridge
atomic-waker = { version = "1.1.2", optional = true }           # Async waker for ring buffer notification (behind async-stream feature)
thiserror = "2.0.18"                                       # For error handling
log = "0.4.29"                                                 # For logging

hound = "3.5.1"
clap = { version = "4.5.60", features = ["derive"] }
color-eyre = "0.6.5"
ctrlc = "3.5.2"
libc = "0.2.183"

env_logger = "0.11.9"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Platform-specific audio capture
[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.22.0"  # WASAPI bindings for Process Loopback
windows = { version = "0.62.2", features = [
    "Foundation",                 # For basic Windows types like HRESULT, BOOL, HANDLE
    "Win32_Foundation",           # For basic Windows types like HRESULT, BOOL, HANDLE
    "Win32_System_Com",           # For COM initialization (CoInitializeEx, CoUninitialize) and operations (CoCreateInstance, CLSCTX_ALL)
    "Win32_Media_Audio",          # For WASAPI interfaces (IMMDeviceEnumerator, MMDeviceEnumerator, IMMDevice, IAudioClient, IAudioCaptureClient, WAVEFORMATEX, IAudioSessionManager2, IAudioSessionEnumerator, IAudioSessionControl, IAudioSessionControl2)
    # and constants (eRender, eConsole, AUDCLNT_SHAREMODE_SHARED, AUDCLNT_STREAMFLAGS_LOOPBACK)
    # Process Loopback specific: AUDIOCLIENT_ACTIVATION_PARAMS, AUDIOCLIENT_PROCESS_LOOPBACK_PARAMS, VIRTUAL_AUDIO_DEVICE_PROCESS_LOOPBACK
    "Win32_Devices_FunctionDiscovery",  # For device enumeration
    "Win32_Devices_Properties",         # For device properties
    "Win32_UI_Shell_PropertiesSystem",  # For property system
    "Win32_System_Com_StructuredStorage", # For structured storage
    "Win32_Media_KernelStreaming",      # For kernel streaming
    "Win32_Media_Multimedia",           # For multimedia APIs
    "Win32_System_Threading",           # For OpenProcess, GetCurrentProcessId, QueryFullProcessImageNameW
    "Win32_System_ProcessStatus",       # For K32GetModuleFileNameExW
    "Win32_System_Variant",             # For PROPVARIANT used in Process Loopback activation
    "Win32_Security",                   # For security APIs
] }
windows-core = "0.62.2"  # Core Windows types
widestring = "1.2.1"   # For wide string conversion
sysinfo = "0.38.4"     # For process discovery by name

[target.'cfg(target_os = "linux")'.dependencies]
# PipeWire dependencies for application-specific capture
# System requirements: libpipewire-0.3-dev, pkg-config, build-essential, clang, libclang-dev, and llvm-dev
pipewire = { version = "0.9.2", features = ["v0_3_44"] }  # PipeWire bindings with v0.3.44+ features for monitor streams
libspa = "0.9.2"      # SPA (Simple Plugin API) for format negotiation and parameter handling
libspa-sys = "0.9.2"  # Low-level SPA bindings for direct parameter access

[target.'cfg(target_os = "macos")'.dependencies]
# CoreAudio dependencies for Process Tap (macOS 14.4+)
coreaudio-rs = { version = "0.14.0", features = ["core_audio"] }  # High-level CoreAudio bindings
coreaudio-sys = "0.2.17"  # Low-level CoreAudio FFI bindings
objc2 = { version = "0.6", features = ["exception"] }           # Modern Objective-C runtime bindings
objc2-foundation = { version = "0.3", features = [
    "NSString", "NSArray", "NSValue", "NSUUID",
    "NSAutoreleasePool", "NSObject",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSWorkspace", "NSRunningApplication",
] }
core-foundation = "0.10.1"          # For CFDictionary creation (aggregate device description)
core-foundation-sys = "0.8.7"       # Low-level Core Foundation FFI bindings

sysinfo = "0.38.4"                  # For process tree discovery (ProcessTree capture target)
# Note: CATapDescription is a private CoreAudio class — raw msg_send! is required (no objc2 bindings)

[build-dependencies]
pkg-config = "0.3.32"

[dev-dependencies]
criterion = "0.8.2" # Benchmarking
tempfile = "3.27.0" # Temporary files for tests
rand = "0.10.0" # For generating test data
rand_pcg = "0.10.1" # For deterministic random numbers in tests
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures-util = "0.3"

[[bin]]
name = "rsac"
path = "src/main.rs"

[[bin]]
name = "standardized_test"
path = "src/bin/standardized_test.rs"

[[example]]
name = "verify_audio"
path = "examples/verify_audio.rs"

[[example]]
name = "basic_capture"
path = "examples/basic_capture.rs"

[[example]]
name = "record_to_file"
path = "examples/record_to_file.rs"

[[example]]
name = "list_devices"
path = "examples/list_devices.rs"

[[example]]
name = "async_capture"
path = "examples/async_capture.rs"
required-features = ["async-stream"]

[[bin]]
name = "app_capture_test"
path = "src/bin/app_capture_test.rs"

[[bin]]
name = "pipewire_test"
path = "src/bin/pipewire_test.rs"

[[bin]]
name = "run_tests"
path = "src/bin/run_tests.rs"

[[bin]]
name = "test_report_generator"
path = "src/bin/test_report_generator.rs"

[[bin]]
name = "pipewire_diagnostics"
path = "src/bin/pipewire_diagnostics.rs"
required-features = ["feat_linux"]

[[bin]]
name = "wasapi_session_test"
path = "src/bin/wasapi_session_test.rs"
required-features = ["feat_windows"]

[[test]]
name = "ci_audio"
path = "tests/ci_audio/main.rs"
harness = true

[workspace]
members = ["bindings/rsac-python", "bindings/rsac-ffi", "bindings/rsac-napi"]
exclude = ["apps/audio-graph/src-tauri"]
