[package]
name = "rsac"
version = "0.4.0"
edition = "2021"
# Explicit MSRV floor. wasapi 0.23 bumps its own MSRV to 1.76; declaring it here
# makes the minimum supported Rust version visible (under the pinned 1.95
# toolchain). Floor is 1.87: wasapi 0.23 needs 1.76, and the codebase uses
# `u64::is_multiple_of` (stable 1.87). Bump if a dependency/feature requires more.
rust-version = "1.87"
build = "build.rs"
autobins = false
description = "Cross-platform audio capture library with per-application process taps (macOS), WASAPI (Windows), and PipeWire (Linux)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Codeseys-Labs/rust-crossplat-audio-capture"
readme = "README.md"
keywords = ["audio", "capture", "wasapi", "coreaudio", "pipewire"]
categories = ["multimedia::audio", "os"]
exclude = [
    # Application + binding subdirs (published separately or not at all).
    # /bindings matters for rsac-go in particular: the Rust binding crates are
    # auto-excluded by their own Cargo.toml manifests, but rsac-go (Go sources,
    # Makefile, C bridge — no Cargo.toml) would otherwise ship in the tarball.
    "/apps",
    "/bindings",
    # Mobile platform glue (Kotlin AAR + SwiftPM package; ADR-0012) — built by
    # Gradle/Xcode, not cargo; never ships in the crates.io tarball.
    "/mobile",
    # Project-internal docs, scripts, infra (not library artifacts)
    "/docs",
    "/docker",
    "/.docker",
    "/debian",
    "/scripts",
    "/reference",
    "/test_audio",
    "/.github",
    "/target",
    # Test/demo audio assets
    "*.wav",
    "*.mp3",
    # Root-level infra + build-helpers not needed by downstream consumers
    "/docker-compose*.yml",
    "/Dockerfile*",
    "/*.sh",
    "/*.ps1",
    "/*.bat",
    "/slate.json",
    "/Makefile",
    "/AGENTS.md",
]

[features]
# Platform-specific features
# These features enable the compilation of platform-specific audio backend code.
# By default, all platforms are enabled to provide broad compatibility.
# Users can choose to compile only for specific platforms by disabling default features
# and enabling only the desired platform features.
# Example: `cargo build --no-default-features --features feat_windows`
feat_windows = []
feat_linux = []
feat_macos = []
# Mobile backends (ADR-0012/0013; docs/MOBILE_BACKEND_DESIGN.md). Double-gated
# on target_os like the desktop backends, so enabling them on the wrong OS is
# inert. Current slice: Device-target microphone capture only (AAudio /
# AVAudioEngine); playback-capture tiers arrive with rsac-77f1 / rsac-b3aa.
feat_android = []
feat_ios = []

# Default features - enables all platform backends (the two-way target_os
# gate makes non-matching entries no-ops, so this is safe cross-platform).
default = ["feat_windows", "feat_linux", "feat_macos", "feat_android", "feat_ios"]

test-utils = [] # Feature to enable test utilities

# Streaming/data-plane features
async-stream = ["dep:atomic-waker"]  # Async Stream support (adds atomic-waker for async notification)
sink-wav = []                        # WavFileSink sink adapter (hound is always available)
# rsac-3616: opt-in sample-domain SPSC ring (interleaved f32 written via rtrb
# write_chunk_uninit + CopyToUninit) that avoids the per-buffer Vec/AudioBuffer
# allocation on the producer's RT thread. Default OFF — the AudioBuffer ring
# remains the default path; this is A/B'd in benches/bridge.rs.
bridge-zerocopy = []
# rsac-624c: opt-in structured instrumentation. Default OFF — with the feature
# off, rsac_event!/rsac_span! fall back to `log::` (behavior-identical, no extra
# deps). With it on, they emit tracing events/spans and `install_default_tracing`
# becomes available. Pulls in only the `tracing` facade (no tracing-subscriber).
tracing = ["dep:tracing"]
# ADR-0011: opt-in multi-source channel composition (CompositionBuilder /
# Composition in src/compose/). Default OFF — pulls rubato (resampling to the
# session rate; FFT path brings realfft + num-complex) and audioadapter-buffers
# (interleaved-slice adapters rubato v3 consumes). With the feature off the
# dependency graph and API are unchanged.
compose = ["dep:rubato", "dep:audioadapter-buffers"]
# rsac-1ecd: the CLI demo binary's dependencies, feature-gated so library
# consumers stop paying for them (clap/color-eyre/ctrlc/env_logger were
# unconditional before 0.5). NOT in default features — build the demo with
# `cargo build --features cli` / `cargo install rsac --features cli`. Binaries
# and examples that need these declare `required-features = ["cli"]`.
cli = ["dep:clap", "dep:color-eyre", "dep:ctrlc", "dep:env_logger"]
# ADR-0015: opt-in macOS system-audio-capture TCC preflight. Default OFF —
# it dlopen/dlsym's the PRIVATE, undocumented TCC.framework SPI
# `TCCAccessPreflight("kTCCServiceAudioCapture")` to make
# `check_audio_capture_permission()` return a real Granted/Denied answer on
# macOS instead of the honest `NotDetermined` stub. Kept behind a feature
# because private SPI is App-Store-review-risky and may break on a future
# macOS. Off by default → no private symbol in the shipped artifact, public
# API unchanged. Adds no dependency (uses libc dlopen + core-foundation).
macos-tcc-spi = []

[dependencies]
# Core dependencies
futures-core = "0.3.32"
rtrb = "0.3.4"                                               # Lock-free SPSC ring buffer for audio data bridge (0.3.4: write_chunk_uninit + CopyToUninit for bridge-zerocopy)
atomic-waker = { version = "1.1.2", optional = true }           # Async waker for ring buffer notification (behind async-stream feature)
thiserror = "2.0.18"                                       # For error handling
log = "0.4.29"                                                 # For logging
tracing = { version = "0.1.41", optional = true }              # Optional structured instrumentation (behind the `tracing` feature; rsac_event!/rsac_span! fall back to `log::` when off)

hound = "3.5.1"
# CLI-only deps (behind the `cli` feature; see [features] above).
clap = { version = "4.5.60", features = ["derive"], optional = true }
color-eyre = { version = "0.6.5", optional = true }
ctrlc = { version = "3.5.2", optional = true }
libc = "0.2.183"

env_logger = { version = "0.11.11", optional = true }

# compose-only deps (behind the `compose` feature; ADR-0011). rubato v3 MSRV is
# 1.85 — under our 1.87 floor; the CI `msrv` job is the tripwire if a future
# bump raises it. audioadapter-buffers is pinned to the same major rubato 3.x
# itself consumes (its `Adapter`/`AdapterMut` traits must come from the SAME
# crate version rubato's `process_into_buffer` expects, or the impls mismatch).
rubato = { version = "3.0.0", optional = true }
audioadapter-buffers = { version = "3.0.0", optional = true }

serde = { version = "1.0.228", features = ["derive"] }
# serde_json: hard library dep on the native Linux PipeWire path — it parses the
# `default.audio.sink`/`.source` metadata JSON object in `audio/linux/thread.rs`
# (`parse_default_metadata_name`), which the in-process native registry listener
# (post-H4) emits, not just the `pw-dump` subprocess fallback. So it stays a
# library dependency on Linux and is NOT cfg-gated to diagnostics-only (rsac-3ff4).
# Patch-pinned to the latest compatible 1.0.x; no major/minor bump.
serde_json = "1.0.150"

# Platform-specific audio capture
[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.23.0"  # WASAPI bindings for Process Loopback (0.23: safe parse_from_blob_bytes, get_device)
windows = { version = "0.62.2", features = [
    "Foundation",                 # For basic Windows types like HRESULT, BOOL, HANDLE
    "Win32_Foundation",           # For basic Windows types like HRESULT, BOOL, HANDLE
    "Win32_System_Com",           # For COM initialization (CoInitializeEx, CoUninitialize) and operations (CoCreateInstance, CLSCTX_ALL)
    "Win32_Media_Audio",          # For WASAPI interfaces (IMMDeviceEnumerator, MMDeviceEnumerator, IMMDevice, IAudioClient, IAudioCaptureClient, WAVEFORMATEX, IAudioSessionManager2, IAudioSessionEnumerator, IAudioSessionControl, IAudioSessionControl2)
    # and constants (eRender, eConsole, AUDCLNT_SHAREMODE_SHARED, AUDCLNT_STREAMFLAGS_LOOPBACK)
    # Process Loopback specific: AUDIOCLIENT_ACTIVATION_PARAMS, AUDIOCLIENT_PROCESS_LOOPBACK_PARAMS, VIRTUAL_AUDIO_DEVICE_PROCESS_LOOPBACK
    "Win32_Devices_FunctionDiscovery",  # For device enumeration
    "Win32_Devices_Properties",         # For device properties
    "Win32_UI_Shell_PropertiesSystem",  # For property system
    "Win32_System_Com_StructuredStorage", # For structured storage
    "Win32_Media_KernelStreaming",      # For kernel streaming
    "Win32_Media_Multimedia",           # For multimedia APIs
    "Win32_System_Threading",           # For OpenProcess, GetCurrentProcessId, QueryFullProcessImageNameW
    "Win32_System_ProcessStatus",       # For K32GetModuleFileNameExW
    "Win32_System_Variant",             # For PROPVARIANT used in Process Loopback activation
    "Win32_Security",                   # For security APIs
] }
windows-core = "0.62.2"  # Core Windows types
widestring = "1.2.1"   # For wide string conversion
sysinfo = "0.38.4"     # For process discovery by name

[target.'cfg(target_os = "linux")'.dependencies]
# PipeWire dependencies for application-specific capture
# System requirements: libpipewire-0.3-dev, pkg-config, build-essential, clang, libclang-dev, and llvm-dev
pipewire = { version = "0.9.2", features = ["v0_3_65"] }  # v0.3.65 API gate (transitively includes v0_3_44 monitor-stream APIs and enables spa/v0_3_65). Declared here as a real cargo feature — previously force-injected globally via a .cargo/config.toml rustflags cfg hack (rsac-9b3c).
libspa = "0.9.2"      # SPA (Simple Plugin API) for format negotiation and parameter handling
libspa-sys = "0.9.2"  # Low-level SPA bindings for direct parameter access

[target.'cfg(target_os = "macos")'.dependencies]
# CoreAudio dependencies for Process Tap (macOS 14.4+)
coreaudio-rs = { version = "0.14.0", features = ["core_audio"] }  # High-level CoreAudio bindings
coreaudio-sys = "0.2.17"  # Low-level CoreAudio FFI bindings
objc2 = { version = "0.6", features = ["exception"] }           # Modern Objective-C runtime bindings
objc2-foundation = { version = "0.3", features = [
    "NSString", "NSArray", "NSValue", "NSUUID",
    "NSAutoreleasePool", "NSObject",
] }
objc2-app-kit = { version = "0.3", features = [
    "NSWorkspace", "NSRunningApplication",
] }
core-foundation = "0.10.1"          # For CFDictionary creation (aggregate device description)
core-foundation-sys = "0.8.7"       # Low-level Core Foundation FFI bindings

sysinfo = "0.38.4"                  # For process tree discovery (ProcessTree capture target)
# Note: CATapDescription is a private CoreAudio class — raw msg_send! is required (no objc2 bindings)

[target.'cfg(target_os = "ios")'.dependencies]
# iOS backend (feat_ios, mic slice — rsac-9e02): AVAudioEngine via the objc2
# family, versions matching the macOS block above. This dependency block is
# owned by the iOS backend work; extend it there if typed framework crates
# (e.g. objc2-avf-audio) prove viable for cross-checking without an Apple SDK.
#
# NOTE: deliberately WITHOUT the objc2 "exception" feature the macOS block
# enables — that feature pulls in objc2-exception-helper, whose build script
# compiles an Objective-C file (needs xcrun + an Apple SDK), which breaks the
# host-independent `cargo check --target aarch64-apple-ios` CI/dev loop. The
# iOS backend does not use objc2::exception::catch, so nothing is lost.
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = [
    "NSString", "NSArray", "NSValue",
    "NSAutoreleasePool", "NSObject", "NSError",
    # ReplayKit broadcast ring consumer (rsac-b3aa): App Group container
    # resolution via -[NSFileManager containerURLForSecurityApplicationGroupIdentifier:].
    "NSFileManager", "NSURL",
] }
block2 = "0.6"   # ObjC blocks for the AVAudioEngine input-node tap callback
# Typed AVFAudio bindings (same objc2 0.6 generation as the macOS block's
# objc2-app-kit). Features cover exactly the mic-tap surface used by
# src/audio/ios/avaudio.rs: engine + input node, bus formats, the PCM tap
# buffer/time types, and the block2 glue for AVAudioNodeTapBlock.
objc2-avf-audio = { version = "0.3", features = [
    "AVAudioEngine", "AVAudioNode", "AVAudioIONode", "AVAudioFormat",
    "AVAudioBuffer", "AVAudioTime", "AVAudioTypes", "block2",
] }

# Android backend (feat_android — rsac-20cd mic slice, rsac-77f1 playback):
# AAudio is bound via in-tree extern "C" declarations against the stable NDK
# ABI (see src/audio/android/aaudio.rs). The playback-capture path (JNI
# orchestration of the mobile/android AAR, src/audio/android/jni.rs) uses
# jni-sys — the canonical, declarations-only transcription of jni.h (no
# transitive deps, no build.rs). Chosen over (a) the full `jni` crate, which
# drags cesu8/combine/thiserror for ~15 functions we call, and (b) an
# in-tree hand transcription of the 233-entry JNIEnv vtable, where a single
# misplaced field silently calls the wrong JVM function (UB) — the exact
# failure class the in-tree-FFI convention exists to avoid, inverted.
[target.'cfg(target_os = "android")'.dependencies]
jni-sys = "0.3"

[build-dependencies]
pkg-config = "0.3.32"

[dev-dependencies]
tempfile = "3.27.0" # Temporary files for tests
rand = "0.10.0" # For generating test data
rand_pcg = "0.10.1" # For deterministic random numbers in tests
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
futures-util = "0.3"
# Test-side logger backend so RUST_LOG=rsac=debug actually yields the
# library's debug lines in `--nocapture` CI runs (the ci_audio harness calls
# env_logger's try_init; without a backend the CI env var was a no-op and
# backend-timing questions were undebuggable — rsac-b106 evidence loop).
# Same version as the optional `cli` dependency above.
env_logger = "0.11.11"

# criterion is target-gated OFF the mobile OSes: cargo compiles EVERY
# dev-dependency for any `--tests` target, and criterion's `alloca` dependency
# builds C via cc (needs xcrun / an NDK toolchain), which breaks the
# host-independent mobile cross-target check loops
# (`cargo check --target aarch64-apple-ios --tests`). Benches never run on
# mobile anyway; the [[bench]] targets also set `test = false` so `--tests`
# does not select them where criterion is absent.
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dev-dependencies]
criterion = "0.8.2" # Benchmarking

[[bin]]
name = "rsac"
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "standardized_test"
path = "src/bin/standardized_test.rs"
required-features = ["cli"]

[[example]]
name = "verify_audio"
path = "examples/verify_audio.rs"
required-features = ["cli"]

[[example]]
name = "basic_capture"
path = "examples/basic_capture.rs"
required-features = ["cli"]

[[example]]
name = "record_to_file"
path = "examples/record_to_file.rs"
required-features = ["cli"]

[[example]]
name = "list_devices"
path = "examples/list_devices.rs"

[[example]]
name = "async_capture"
path = "examples/async_capture.rs"
required-features = ["async-stream"]

[[example]]
name = "composed_capture"
path = "examples/composed_capture.rs"
required-features = ["compose"]

[[bin]]
name = "app_capture_test"
path = "src/bin/app_capture_test.rs"

[[bin]]
name = "pipewire_test"
path = "src/bin/pipewire_test.rs"

[[bin]]
name = "pipewire_diagnostics"
path = "src/bin/pipewire_diagnostics.rs"
required-features = ["feat_linux"]

[[bin]]
name = "wasapi_session_test"
path = "src/bin/wasapi_session_test.rs"
required-features = ["feat_windows"]

# Alpine musl + PipeWire linkage smoke test.
# Only meaningful on Linux with feat_linux; guarded via required-features so
# the default `cargo build` on macOS/Windows doesn't try to pull in PipeWire.
# Driven by ci/alpine-musl-validation/smoke-test.sh — see that directory's
# README for when and how to run it. Not wired into regular CI.
[[bin]]
name = "smoke_alpine"
path = "src/bin/smoke_alpine.rs"
required-features = ["feat_linux"]

[[test]]
name = "ci_audio"
path = "tests/ci_audio/main.rs"
harness = true

# rsac-e40c: allocation-counting integration test for the RT bridge producer.
# Its own binary because it installs a process-wide #[global_allocator]; run
# single-threaded (the default for one #[test] per binary). harness = true so the
# standard libtest harness drives it.
[[test]]
name = "rt_alloc"
path = "tests/rt_alloc.rs"
harness = true

# rsac-1d02: cross-platform "honest failure" enumeration test matrix (audit L4).
# Asserts non-empty-or-classified-AudioError (never Ok(empty)/no fabricated
# default) + DeviceInfo round-trip + default-device kind() + the Linux native
# (pw-dump-free) path. Passes headless via graceful skip / honest-failure arm.
# harness = true so the standard libtest harness drives the #[test] fns.
[[test]]
name = "enumeration_matrix"
path = "tests/enumeration_matrix.rs"
harness = true

# rsac-603b: criterion benchmark harness for the bridge data plane. harness =
# false hands main() to criterion_main!; does not affect cargo build/cargo test.
# test = false keeps `cargo check --tests` from selecting the bench target
# (bench targets default to test = true): criterion's `alloca` dep compiles C
# via cc/xcrun, which breaks the host-independent mobile cross-target loops
# (`cargo check --target aarch64-apple-ios --tests`). No CI job runs benches
# in test mode, so nothing is lost (AGENTS.md §8: benches are not executed).
[[bench]]
name = "bridge"
path = "benches/bridge.rs"
harness = false
test = false

# rsac-03a5: criterion benchmark for the consumer-side observability read path
# (stream_stats / backpressure_report assembly + AudioBuffer level meters). Proves
# these are cheap, non-locking, alloc-free reads and embeds an RT-safety
# regression guard. harness = false hands main() to criterion_main!.
[[bench]]
name = "observability"
path = "benches/observability.rs"
harness = false
test = false

[workspace]
members = [
    "bindings/rsac-python",
    "bindings/rsac-ffi",
    "bindings/rsac-napi",
    # Android cdylib shim (librsac.so for the AAR's jniLibs; rsac-0aa9).
    # Lives under /mobile, which is excluded from the crates.io package —
    # workspace membership is orthogonal to packaging.
    "mobile/android-native",
]
exclude = ["apps/audio-graph/src-tauri"]

# rsac#16: docs.rs rendering config. Without this, docs.rs builds with the
# host Linux target's `#[cfg]` resolution — macOS/Windows items would be
# cfg-filtered away and vanish from the rendered docs. `all-features = true`
# compiles every gated module so every public item is reachable; the
# `docsrs` cfg lets `#[cfg_attr(docsrs, doc(...))]` annotations render the
# platform-availability badges in the docs.rs UI.
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
# Render docs for each supported OS family separately. `all-features = true`
# alone isn't enough: `#[cfg(target_os = "macos")]` / `"windows"` items are
# stripped before rustdoc even sees them on a Linux-only build, so
# per-platform renders are what makes macOS Process Tap + Windows WASAPI
# public items appear on docs.rs. docs.rs will render once per target and
# surface platform-availability badges when the `docsrs` cfg is set.
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "aarch64-apple-darwin",
]