[package]
name = "virtual-audio-device"
version = "0.1.0"
edition = "2021"
description = "Cross-platform virtual audio device for CI testing"
license = "MIT"

[features]
default = []
linux = ["pipewire", "libspa"]

[dependencies]
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"

# Linux PipeWire dependencies (conditional)
[target.'cfg(target_os = "linux")'.dependencies]
pipewire = { version = "0.8.0", features = ["v0_3_44"], optional = true }
libspa = { version = "0.8.0", optional = true }

[[bin]]
name = "vad-setup"
path = "src/main.rs"
