[package]
name = "rsac-ffi"
# In lockstep with the workspace version (rsac + napi + python) — ci.yml's
# version-lockstep gate and scripts/bump-version.sh treat all seven manifests as
# one version.
version = "0.5.0"
edition = "2021"
# Mirror the parent crate's MSRV floor (1.87): rsac-ffi builds against rsac and
# must not require a newer toolchain than the library it wraps.
rust-version = "1.87"
description = "C FFI bindings for the rsac (Rust Cross-Platform Audio Capture) library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Codeseys-Labs/rust-crossplat-audio-capture"
readme = "README.md"
keywords = ["audio", "capture", "ffi", "c-bindings"]
categories = ["multimedia::audio", "external-ffi-bindings"]
# NOTE: publishing is deferred. Keep this false so day-to-day workspace builds
# never risk an accidental cargo publish; release owners should follow
# docs/RELEASE_PROCESS.md once the registry lane is re-enabled.
publish = false

[lib]
name = "rsac_ffi"
crate-type = ["cdylib", "staticlib"]

[features]
default = []
# Mirror rsac's platform features so consumers can control backend compilation
feat_windows = ["rsac/feat_windows"]
feat_linux = ["rsac/feat_linux"]
feat_macos = ["rsac/feat_macos"]
# Mobile passthroughs (rsac-7a18): the C ABI is target-independent (the
# curated header does not change), but Flutter/C consumers cross-compile this
# crate for the mobile triples — staticlib + dart:ffi on iOS, cdylib in
# jniLibs on Android (coordinate with rsac-0aa9's librsac.so, which serves
# the JNI/AAR path; this crate serves the C-symbol path).
feat_android = ["rsac/feat_android"]
feat_ios = ["rsac/feat_ios"]
sink-wav = ["rsac/sink-wav"]
# Multi-source channel composition (ADR-0011). Follows the sink-wav precedent:
# a non-default forwarding feature — enable with `--features compose`. The
# compose FFI surface (rsac_composition_* / rsac_group_* in src/compose.rs) is
# compiled only when this is on; both headers guard those declarations behind
# the RSAC_FEATURE_COMPOSE preprocessor define (see cbindgen.toml [defines]).
compose = ["rsac/compose"]

[dependencies]
# Path + version: the path is used for local/workspace dev, and the version
# requirement is what a future cargo publish records (crates.io ignores `path`).
# Keep the version in lockstep with the parent crate's `[package].version` so a
# future published rsac-ffi resolves the matching rsac release.
rsac = { path = "../../", version = "0.5.0", default-features = false }
log = "0.4"

[build-dependencies]
cbindgen = "0.28"
