[package]
name = "rsac-napi"
version = "0.2.0"
edition = "2021"
description = "Node.js/TypeScript bindings for rsac (Rust Cross-Platform Audio Capture)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/baladita/rust-crossplat-audio-capture"

[lib]
crate-type = ["cdylib"]

[dependencies]
rsac = { path = "../.." }
napi = { version = "2", features = ["napi9", "async", "tokio_rt", "serde-json"] }
napi-derive = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
